--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -19,7 +19,10 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'blog:post_list' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="{% url 'blog:tag_create' %}">Создать Тег</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="{% url 'blog:post_create' %}">Создать пост</a>
                 </li>
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -30,9 +33,6 @@
                         <li><a class="dropdown-item" href="{% url 'blog:tag_detail' pk=tag.id %}">{{tag.name}}</a></li>
                     {% endfor %}
                 </ul>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                 </li>
             </ul>
             <form class="d-flex">
