--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
     {% block content %}
+        <br>
+        <a class='btn btn-primary' href = "{% url 'blog:post_edit' pk=post.pk %}">Изменить</a>
+        <br>
+        <br>
+        <a class='btn btn-primary' href = "{% url 'blog:post_delete' pk=post.pk %}">Удалить</a>
+        <br>
         <h1>{{post.name}}</h1>
         <p>{{post.article}}</p>
         {% for tag in post.tags.all %}
