--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                 <a class="nav-link" href="{% url 'authe:registration' %}">Регистрация</a>
                 </li>
+                <li class="nav-item">
+                <a class="nav-link" href="{% url 'authe:login' %}">Логин</a>
+                </li>
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Теги
