--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -16,24 +16,31 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'blog:post_list' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="{% url 'blog:tag_create' %}">Создать Тег</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="{% url 'blog:post_create' %}">Создать пост</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="{% url 'authe:registration' %}">Регистрация</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="{% url 'authe:login' %}">Логин</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="{% url 'authe:edit_password' %}">Сменить пароль</a>
-                </li>
+                {% if not user.is_authenticated %}
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'blog:post_list' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="{% url 'authe:reset' %}">Сбросить пароль</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="{% url 'authe:registration' %}">Регистрация</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="{% url 'authe:login' %}">Login</a>
+                    </li>
+                {% elif user.is_authenticated%}
+                    <li class="nav-item">
+                    <a class="nav-link" href="{% url 'blog:post_create' %}">Создать пост</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="{% url 'authe:edit_password' %}">Сменить пароль</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="{% url 'authe:logout' %}">Выйти</a>
+                    </li>
+                    <li>{{user.email}}</li>
+                {% endif %}
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Теги
